--- a/src/app/management/pages/movie-list/movie-list.component.html
+++ b/src/app/management/pages/movie-list/movie-list.component.html
@@ -1,4 +1,4 @@
-<div class="container p-4">
+<!-- <div class="container p-4">
     <div class="flex items-center text-blue-700 text-2xl font-bold mb-2">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
             stroke="currentColor" class="size-6 mr-1">
@@ -260,4 +260,4 @@
         </div>
 
     </ng-container>
-</nz-modal>
+</nz-modal> -->
