--- a/src/app/main/pages/video-streaming/video-streaming.component.html
+++ b/src/app/main/pages/video-streaming/video-streaming.component.html
@@ -4,10 +4,8 @@
         @for(i of [].constructor(10);track $index){
         <li></li>
         }
-
     </ul>
     <div class="video-player">
-
         <!-- <video controls autoplay style="width: 100%;height: 100%; object-fit: contain;"
             src="https://file-examples.com/storage/fe3f15b9da66a36baa1b51a/2017/04/file_example_MP4_480_1_5MG.mp4">
         </video> -->
@@ -19,34 +17,22 @@
             <h1 class="text-white text-4xl mt-4" [innerText]="currentMovieTitle"></h1>
             <p class="text-2xl m-2" [innerText]="'Mùa 1'"></p>
             <p class="text-xl m-2">{{currentMovieDetail.year}} - 1/1 Tập - {{currentMovieDetail.country}}</p>
-
             <p class="summary" [innerText]="currentMovieDetail.summary"></p>
-
-            <!-- <i class="fa fa-star" style="font-size:24px; color:rgb(48, 156, 245); background-color: rgb(0, 0, 0);">
-                    Đánh Giá</i>
-                @for (item of [].constructor(5); track $index) {
-                <i class="fa fa-star" style="font-size:24px; color:rgb(82, 82, 82);"></i>
-                } -->
             <div id="rating" (mouseleave)="leaveStarListener()">
                 <i class="fa fa-star" style="font-size:36px; color:rgb(48, 156, 245); text-align: left;">
                     Đánh Giá</i>
                 <br>
                 @for (start of stars; track $index) {
-                    <span (mouseenter)="enterStarListener($index)"
-                        (click)="selectStar($index)" [ngClass]="{'hover': $index <= hoverIndex}">
-                        ★
-                    </span>
+                <span (mouseenter)="enterStarListener($index)" (click)="selectStar($index)"
+                    [ngClass]="{'hover': $index <= hoverIndex}">
+                    ★
+                </span>
                 }
             </div>
-
-
-
-
-
-
         </div>
         <div class="director-detail mt-5">
-            <button class="interact-button text-lg mr-3" (click)="currentMovieDetail.isFollowed = !currentMovieDetail.isFollowed"><i [ngClass]="{
+            <button class="interact-button text-lg mr-3"
+                (click)="currentMovieDetail.isFollowed = !currentMovieDetail.isFollowed"><i [ngClass]="{
                 'fa': true,
                 'fa-heart': currentMovieDetail.isFollowed,
                 'fa-heart-o': !currentMovieDetail.isFollowed
@@ -94,14 +80,14 @@
         <h1>Diễn Viên</h1>
         <div class="avatar-list">
             @for (actor of currentMovieDetail.actors; track $index) {
-                <span class="avatar-item">
-                    <img class="avatar-image"
-                        src="https://i.pinimg.com/474x/3f/3a/d1/3f3ad18a365a1668940d93b6cfc20591.jpg" />
-                    <p>{{actor.name}}</p>
-                    <p>({{actor.role}})</p>
-                </span>
+            <span class="avatar-item">
+                <img class="avatar-image"
+                    src="https://i.pinimg.com/474x/3f/3a/d1/3f3ad18a365a1668940d93b6cfc20591.jpg" />
+                <p>{{actor.name}}</p>
+                <p>({{actor.role}})</p>
+            </span>
             }
-            
+
         </div>
 
     </div>
@@ -125,8 +111,8 @@
     let-itemName="itemName" let-itemId="itemId">
     <span [class]="className">
         <a [href]="'/video/'+itemId">
-        <img [class]="imageClass" [src]="imageSource" />
-        <p class="mt-2"> {{itemName}}</p>
+            <img [class]="imageClass" [src]="imageSource" />
+            <p class="mt-2"> {{itemName}}</p>
         </a>
     </span>
 </ng-template>
@@ -145,14 +131,20 @@
         </span>
 
         <div class="video-list">
-
             @for (item of items; track $index;) {
-                
-                    <ng-container
-                        *ngTemplateOutlet="itemTemplate; context: {className: 'video-item', imageClass: 'video-thumbnail', imageSource:item.thumbnailImage, itemName:item.title,itemId:item.id}">
-                    </ng-container>
-                
+            <ng-container
+                *ngTemplateOutlet="itemTemplate; context: {className: 'video-item', imageClass: 'video-thumbnail', imageSource:item.thumbnailImage, itemName:item.title,itemId:item.id}">
+            </ng-container>
             }
         </div>
+    </div>
+</ng-template>
+
+<ng-template #comment>
+    <div class="comment">
+        <img>
+        <input>
+        
+        <
     </div>
 </ng-template>
